--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 
   <!-- Rodapé -->
   <footer>
-    Feito com ❤️ no mundo do Mario - [Seu Nome]
+    Feito com ❤️ no mundo do Mario - Felipe Bonfim - Análise e Desenvolvimento de Sistemas - Facens - 2025
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
